resources/tests/invalid_syntax/type_ptr_end.ct
//`Expected a '>'!
//1
fn hello()->PTR<i8 {
  pass;
}